kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-deployment
  namespace: flask-dev

spec:
  replicas: 3

  selector:
    matchLabels:
      app: flask

  template:
    metadata:
      labels:
        app: flask

    spec:
      containers:
        - name: flask
          image: kubernetes-flask:v3
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5006
