kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres-deployment
  namespace: flask-dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:16

          ports:
            - containerPort: 5432
