kubernetes/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: flask-dev

spec:
  type: ClusterIP

  selector:
    app: admin

  ports:
    - port: 5007
      targetPort: 5007
