kubernetes/postgres-statefulset-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres-service
  namespace: flask-dev

spec:
  clusterIP: None

  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432
