kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask-service
  namespace: flask-dev

spec:
  selector:
    app: flask

  ports:
    - port: 5006
      targetPort: 5006
      nodePort: 30006

  type: LoadBalancer
